--- a/_posts/2017-02-19-C++-Basics.md
+++ b/_posts/2017-02-19-C++-Basics.md
@@ -1,6 +1,18 @@
+---
+layout: post
+title: "C++ Basics"
+description: "Notes on C++ reference books"
+date: 2017-02-17
+tags: [programming, c++, notes]
+comments: true
+share: true
+---
+
 # C++ Basics
 
 ## I. 《Effective C++》
+
+---
 1. const的好处
     - 只要（某值保持不变）是事实，就应该申明是const，因为说出来可以获得编译器的帮助，确保这条约束不被违反。
     - const成员函数可以作用于const对象。
